force-app/main/default/objects/Cost_of_Care_Disposition__c/Cost_of_Care_Disposition__c.object-meta.xml
<CustomObject>
    <label>Civil Petition Detail</label>
    <nameField>
        <label>Animal or Population Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Civil Petition Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>