force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Amount_Requested__c</fullName>
    <label>Amount Requested</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>