force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Animal_Name_s__c.field-meta.xml
<CustomField>
    <fullName>Animal_Name_s__c</fullName>
    <label>Animal Names (if more than one)</label>
    <type>TextArea</type>
</CustomField>