force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Animals_Forfeited_Date__c.field-meta.xml
<CustomField>
    <fullName>Animals_Forfeited_Date__c</fullName>
    <label>Animals Forfeited Date</label>
    <type>Date</type>
</CustomField>