force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Appeal_Box_Folder__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Box_Folder__c</fullName>
    <label>Appeal Box Folder</label>
    <type>Url</type>
</CustomField>