force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Appeal_Docket__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Docket__c</fullName>
    <label>Appeal Docket #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>