force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Box_Link_Judgment__c.field-meta.xml
<CustomField>
    <fullName>Box_Link_Judgment__c</fullName>
    <label>Box Link - Judgment</label>
    <type>Url</type>
</CustomField>