force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Box_Link_Petition__c.field-meta.xml
<CustomField>
    <fullName>Box_Link_Petition__c</fullName>
    <label>Box Link - Petition</label>
    <type>Url</type>
</CustomField>