force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case #</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Cost_of_Care_Dispositions</relationshipName>
    <type>Lookup</type>
</CustomField>