force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Cost_of_Care_Affiant__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Care_Affiant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost of Care Affiant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cost_of_Care_Dispositions</relationshipName>
    <type>Lookup</type>
</CustomField>