force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Cost_Per_Day_Other__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Day_Other__c</fullName>
    <label>Cost Per Day (Other)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>