force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Current_Total__c.field-meta.xml
<CustomField>
    <fullName>Current_Total__c</fullName>
    <formula>Total_Animals__c -  Total_Outcomes__c +  Total_Intakes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>