force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Defendant_Respondent__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Respondent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defendant/Respondent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Cost_of_Care_Dispositions1</relationshipName>
    <type>Lookup</type>
</CustomField>