force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Defense_Counsel__c.field-meta.xml
<CustomField>
    <fullName>Defense_Counsel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defense Counsel</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Cost_of_Care_Dispositions3</relationshipName>
    <type>Lookup</type>
</CustomField>