force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Docket__c.field-meta.xml
<CustomField>
    <fullName>Docket__c</fullName>
    <label>Docket #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>