force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Dogs__c.field-meta.xml
<CustomField>
    <fullName>Dogs__c</fullName>
    <label>Number of Dogs</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>