force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/First_Payment_Due_By__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Due_By__c</fullName>
    <label>First Payment Due By</label>
    <type>Date</type>
</CustomField>