force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Initial_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Release_Date__c</fullName>
    <label>Initial Release Date</label>
    <summarizedField>Length_of_Stay__c.Date__c</summarizedField>
    <summaryFilterItems>
        <field>Length_of_Stay__c.Event_Type__c</field>
        <operation>equals</operation>
        <value>Released by Prosecutor Date</value>
    </summaryFilterItems>
    <summaryForeignKey>Length_of_Stay__c.Cost_of_Care_Disposition__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>