force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Judgment_Details__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Details__c</fullName>
    <label>Judgment Details</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forfeiture</fullName>
            </value>
            <value>
                <fullName>Bond</fullName>
            </value>
            <value>
                <fullName>No Bond Ordered</fullName>
            </value>
            <value>
                <fullName>Hold Animals</fullName>
            </value>
            <value>
                <fullName>Return Animals</fullName>
            </value>
            <value>
                <fullName>Other (describe)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>