force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Lawyer_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Assigned__c</fullName>
    <label>Lawyer Assigned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>Elizabeth Brandler</fullName>
            </value>
            <value>
                <fullName>Erin Satterthwaite</fullName>
            </value>
            <value>
                <fullName>Donna Lassa</fullName>
            </value>
            <value>
                <fullName>Jennifer Chin</fullName>
            </value>
            <value>
                <fullName>Meredith Beach</fullName>
            </value>
            <value>
                <fullName>Paul Bauer</fullName>
            </value>
            <value>
                <fullName>Robert Hensley</fullName>
            </value>
            <value>
                <fullName>Tamara Feliciano</fullName>
            </value>
            <value>
                <fullName>Nathan Zilak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>