force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Monthly_Bond_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Bond_Ordered__c</fullName>
    <label>Monthly Bond Ordered</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>