force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Next_Bond_Court_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Bond_Court_Date__c</fullName>
    <label>Next Bond Court Date</label>
    <type>Date</type>
</CustomField>