force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Number_of_Livestock__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Livestock__c</fullName>
    <label>Number of Livestock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>