force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Number_of_Wildlife__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Wildlife__c</fullName>
    <label>Number of Wildlife</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>