force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Part_NYC_Only__c.field-meta.xml
<CustomField>
    <fullName>Part_NYC_Only__c</fullName>
    <label>Part (NYC Only)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>