force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Payment_Made_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Made_Date__c</fullName>
    <label>Payment Made Date</label>
    <type>Date</type>
</CustomField>