force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Petition_Filed_Date__c.field-meta.xml
<CustomField>
    <fullName>Petition_Filed_Date__c</fullName>
    <label>Petition Filed Date</label>
    <type>Date</type>
</CustomField>