force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Plaintiff_Counsel__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Counsel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plaintiff Counsel</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Cost_of_Care_Dispositions2</relationshipName>
    <type>Lookup</type>
</CustomField>