force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Plaintiff_Petitioner__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Petitioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plaintiff/Petitioner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Cost_of_Care_Dispositions</relationshipName>
    <type>Lookup</type>
</CustomField>