force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Population_Length_of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Population_Length_of_Stay__c</fullName>
    <formula>Initial_Release_Date__c -  Initial_Seizure_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The calculation is the number of days from the date of seizure through the date released by prosecutor</inlineHelpText>
    <label>Population Length of Stay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>