force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Statute__c.field-meta.xml
<CustomField>
    <fullName>Statute__c</fullName>
    <label>Statute #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>