force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Stay__c.field-meta.xml
<CustomField>
    <fullName>Stay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stay</label>
    <type>Checkbox</type>
</CustomField>