force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Subject_Matter__c.field-meta.xml
<CustomField>
    <fullName>Subject_Matter__c</fullName>
    <label>Subject Matter</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Cruelty/Neglect</fullName>
            </value>
            <value>
                <fullName>Animal Sheltering</fullName>
            </value>
            <value>
                <fullName>Behavior</fullName>
            </value>
            <value>
                <fullName>Case Finances</fullName>
            </value>
            <value>
                <fullName>Cockfighting</fullName>
            </value>
            <value>
                <fullName>Crime Scene Process</fullName>
            </value>
            <value>
                <fullName>Dogfighting</fullName>
            </value>
            <value>
                <fullName>Equine Care and Husbandry</fullName>
            </value>
            <value>
                <fullName>Forensic Veterinary Science</fullName>
            </value>
            <value>
                <fullName>Shelter Medicine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>