force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Total_Animals__c.field-meta.xml
<CustomField>
    <fullName>Total_Animals__c</fullName>
    <formula>Number_of_Cats__c +   Dogs__c  +   Number_of_Equine__c +  Number_of_Chickens_fighting_inc_hens__c +  Number_of_Exotics__c +  Number_of_Fowl_non_fighting__c +  Number_of_Livestock__c +  Number_of_Other_Animals__c +  Number_of_Rabbits__c + Number_of_Cows__c + Number_of_Goats__c + Number_of_Pigs__c + Number_of_Reptiles__c + Number_of_Sheep__c + Number_of_Wildlife__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Animals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>