force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Total_Intakes__c.field-meta.xml
<CustomField>
    <fullName>Total_Intakes__c</fullName>
    <label>Total Intakes</label>
    <summarizedField>Population_Change__c.Number_of_Animals__c</summarizedField>
    <summaryFilterItems>
        <field>Population_Change__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Born Post-Seizure</value>
    </summaryFilterItems>
    <summaryForeignKey>Population_Change__c.Cost_of_Care_Disposition__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>