force-app/main/default/objects/Cost_of_Care_Disposition__c/fields/Witnesses__c.field-meta.xml
<CustomField>
    <fullName>Witnesses__c</fullName>
    <label>Witnesses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amanda Fitch</fullName>
            </value>
            <value>
                <fullName>Christina Lee</fullName>
            </value>
            <value>
                <fullName>Dr. Katherine Miller</fullName>
            </value>
            <value>
                <fullName>Dr. Pam Reid</fullName>
            </value>
            <value>
                <fullName>Elizabeth Pearlman, DVM</fullName>
            </value>
            <value>
                <fullName>Kristina Baucom, DVM</fullName>
            </value>
            <value>
                <fullName>Kyle Held</fullName>
            </value>
            <value>
                <fullName>Leigh Anne Wilson</fullName>
            </value>
            <value>
                <fullName>Molly White</fullName>
            </value>
            <value>
                <fullName>Rachel Touroo, DVM</fullName>
            </value>
            <value>
                <fullName>Robert Reisman, DVM</fullName>
            </value>
            <value>
                <fullName>Terry Mills</fullName>
            </value>
            <value>
                <fullName>Teresa Ladner</fullName>
            </value>
            <value>
                <fullName>Bekah Weitz</fullName>
                <isActive>false</isActive>
                <label>Bekah Weitz</label>
            </value>
            <value>
                <fullName>Kathryn Destreza</fullName>
                <isActive>false</isActive>
                <label>Kathryn Destreza</label>
            </value>
            <value>
                <fullName>Nicole Eller, DVM</fullName>
                <isActive>false</isActive>
                <label>Nicole Eller, DVM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>